# bachelor-thesis

./: .gitignore  .pre-commit-config.yml  CLAUDE.md  README.md  config.example.toml  pyproject.toml
.woodpecker/: release.yaml
pve_tui/: main.py
pve_tui/cli/: group.py  init.py  main.py  resolve.py  server.py  snapshot.py  utils.py
pve_tui/core/: consts.py  exceptions.py  utils.py
pve_tui/core/models/: __init__.py  client_config.py  server.py  server_brief.py
pve_tui/core/services/: action.py  api.py  cluster.py  context.py  discovery.py  resource.py
pve_tui/core/services/actions/: base.py  group.py  snapshot.py  status.py
pve_tui/shared/: api_client.py  utils.py
pve_tui/shared/models/: __init__.py  client_config.py  server_brief.py
pve_tui/tui/: __init__.py  app.py
pve_tui/tui/screens/: __init__.py  auth_error.py  input_modal.py  main.py  no_config.py  selection_modal.py
pve_tui/tui/widgets/: __init__.py  multiselect_list_item.py  multiselect_list_view.py  server_action_list.py  server_brief.py  server_detail_view.py  server_group_brief.py  server_group_detail_view.py  server_list.py  split_view.py
scripts/: pre-bump.py  pre-bump.sh
