[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[project]
name = "pve_tui"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.3",
    "textual>=7.4.0",
    "typer>=0.24.1",
]

[project.scripts]
pve-tui = "pve_tui.main:main"
pve = "pve_tui.cli.main:app"


[dependency-groups]
dev = [
    "ipython>=9.9.0",
    "textual-dev>=1.8.0",
]

[tool.uv.build-backend]
module-root = ""

[tool.ruff]
target-version = "py314"

[tool.ruff.format]
quote-style = "single"
